--- a/conf/redismon.conf
+++ b/conf/redismon.conf
@@ -1,3 +1,3 @@
 items:
-- {cluster_name: cluster_2, password: '', port: 6383}
-- {cluster_name: cluster_1, password: '123', port: 6388}
+- {ip: 192.168.0.1, cluster_name: cluster_2, password: '', port: 6383}
+- {ip: 192.168.0.2, cluster_name: cluster_1, password: '123', port: 6388}
